
Bugs fixed in 3.26.1
====================
[] Filter image in Status bar is no longer replaced by 'Filter1' after changing
preferences via Manage->Options.
[] Selecting hexadecimal passwords as the database policy no longer causes validation
to fail.
[] Toolbar now updated to reflect R/W or R-O mode when user dynamically changes mode.

New Features for 3.26
=====================
[3288341] Autotype has been added to the DragBar. Drag the image to an
input area on another Window (e.g., Browser) and PasswordSafe will
begin Autotype from there. 
[3286721] User can now toggle between read-only and read-write modes
via a menu item or by double-clicking on the current R-O or R/W
indicator in the Status Bar.
[3203152] The displayed language can now be changed via the new
Manage->Change Language menu.
[3065111] Add/Edit now displays both the Application's (PasswordSafe) and the
current database's default Autotype string (if set via Manage->Options).
[2964804, 1855389] The user can specify the list of symbols valid for
password generation, and can override this for any particular
entry (except when EasyVision or Pronounceable passwords are chosen).
[1831893, 1471134] Added Autotype code "\s" to send "Shift+Tab" (back tab).
[] Allow user to control copying of the password to clipboard when
performing "Browse to URL" via an option in Options->Security. This is
a database option i.e., you can have different setting for different
databases.
[] Support importing of TXT, CSV files and XML exported from KeePass
V1 and KeePass V2 XML files. Note that KeePass V2's export in the V1
format is does not conform to their own format as specified by their
V1 product and can not be imported. Please review our Help file for
the settings in KeePass required during their export. 

Changes to Existing Features in 3.26
====================================
[] New image on start-up dialog - courtesy of user Prinz_Eugen.
[] Polish installation texts added thanks to Michal Niklas.