@@ -112,6 +112,10 @@ preferences via Manage&rarr;Options.</td>
 <td align="center" width="100">n/a</td>
 <td>Toolbar now updated to reflect R/W or R-O mode when user dynamically changes mode.</td>
 </tr>
+<tr>
+<td align="center" width="100">n/a</td>
+<td>Correctly show database has been modified (to allow saving) if database preferences have been changed.</td>
+</tr>
 </tbody>
 </table>
 <br>
