@@ -459,9 +459,6 @@ void DboxMain::OnOptions()
       }
     }
 
-    if (m_core.HaveDBPrefsChanged())
-      ChangeOkUpdate();
-
     if (prefs->GetPref(PWSprefs::UseSystemTray)) { 
       if (prefs->GetPref(PWSprefs::HideSystemTray) && 
           prefs->GetPref(PWSprefs::HotKeyEnabled) &&
@@ -482,7 +479,7 @@ void DboxMain::OnOptions()
     StringX sxNewDBPrefsString(prefs->Store(true));
 
     // Maybe needed if this causes changes to database
-    // (currently only DB preferences + updating PWHistory in exisiting entries)
+    // (currently only DB preferences + updating PWHistory in existing entries)
     MultiCommands *pmulticmds = MultiCommands::Create(&m_core);
 
     // Set up Command to update string in database, if necessary & possible
@@ -494,7 +491,7 @@ void DboxMain::OnOptions()
         // Determine whether Tree needs redisplayng due to change
         // in what is shown (e.g. usernames/passwords)
         bool bUserDisplayChanged = optionsPS.UserDisplayChanged();
-        // Note: passwords are only shown in the Tree is usernames are also shown
+        // Note: passwords are only shown in the Tree if usernames are also shown
         bool bPswdDisplayChanged = optionsPS.PswdDisplayChanged();
         bool bNeedGUITreeUpdate = bUserDisplayChanged || 
                  (optionsPS.ShowUsernameInTree() && bPswdDisplayChanged);
@@ -564,6 +561,9 @@ void DboxMain::OnOptions()
         delete pmulticmds;
       }
     }
+
+    if (m_core.HaveDBPrefsChanged())
+      ChangeOkUpdate();
   }
 
   // Restore hotkey as it was or as user changed it - if user pressed OK
